// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package distribute;

option go_package = "github.com/mosuka/blast/protobuf/distribute";

service Distribute {
    rpc LivenessProbe (google.protobuf.Empty) returns (LivenessProbeResponse) {}
    rpc ReadinessProbe (google.protobuf.Empty) returns (ReadinessProbeResponse) {}

    rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse) {}
    rpc IndexDocument (stream IndexDocumentRequest) returns (IndexDocumentResponse) {}
    rpc DeleteDocument (stream DeleteDocumentRequest) returns (DeleteDocumentResponse) {}
    rpc Search (SearchRequest) returns (SearchResponse) {}
}

// use for health check
message LivenessProbeResponse {
    enum State {
        UNKNOWN = 0;
        ALIVE = 1;
        DEAD = 2;
    }
    State state = 1;
}

// use for health check
message ReadinessProbeResponse {
    enum State {
        UNKNOWN = 0;
        READY = 1;
        NOT_READY = 2;
    }
    State state = 1;
}

message GetDocumentRequest {
    string id = 1;
}

message GetDocumentResponse {
    google.protobuf.Any fields = 1;
}

message IndexDocumentRequest {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message IndexDocumentResponse {
    int32 count = 1;
}

message DeleteDocumentRequest {
    string id = 1;
}

message DeleteDocumentResponse {
    int32 count = 1;
}

message SearchRequest {
    google.protobuf.Any search_request = 1;
}

message SearchResponse {
    google.protobuf.Any search_result = 1;
}
